[package]
name = "meterline"
version = "0.1.0"
edition = "2024"
description = "A comfy terminal usage tracker for OpenAI/ChatGPT and Anthropic/Claude."
license = "MIT"
repository = "https://github.com/apolonuss/meterline"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
crossterm = "0.28"
directories = "6.0"
hex = "0.4"
keyring = "3.6"
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
rusqlite = { version = "0.32", default-features = false, features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[features]
default = ["portable-storage"]
portable-storage = ["rusqlite/bundled"]
encrypted-storage = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dev-dependencies]
tempfile = "3.14"
